# cairn

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README.pt-BR.md  ROADMAP.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: release.yml
agentic/: README.md
bench/: generate_large_fixture.py  golden.json  publish_metrics.py  qrels.tsv  run_eval.py  run_perf_eval.py  topics-large.jsonl  topics.jsonl
bench/agent/: run_agent_eval.py  tasks-large.jsonl  tasks.example.jsonl
docs/: index.html  install.ps1  install.sh  learn.html  pesquisa.md  prd.md  search-optimization-research.md
docs/assets/: site.js  styles.css
docs/data/: benchmarks.json
docs/guides/: quick-install.md  quick-install.pt-BR.md  ranking-experiments.md  ranking-experiments.pt-BR.md  usage.md  usage.pt-BR.md
docs/plans/: 2026-06-17-cairn-design.md
src/cairn/: __main__.py  agentic.py  archive.py  cli.py  config.py  doctor.py  frontmatter.py  guides.py  indexer.py  notes.py  partials.py  profiles.py  ranking.py  registry.py  retriever.py  schema.py  similar.py  (+5 more)
tests/: test_agent_eval_bench.py  test_agent_workflow.py  test_agentic.py  test_bench.py  test_cli.py  test_doctor.py  test_frontmatter.py  test_guides.py  test_indexer.py  test_init.py  test_install_scripts.py  test_large_benchmark.py  test_notes.py  test_ops.py  test_perf_eval.py  test_profiles.py  test_publish_metrics.py  test_ranking.py  test_registry.py  test_retriever.py  test_schema.py  test_similar.py  test_usage.py  test_validate.py  test_vocabulary.py  test_writeback_bench.py
(+10 files in other folders)
