[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cairn"
version = "0.1.0"
description = "Agent-ready second brain for people and teams."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
cairn = "cairn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
