[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apollokairn-cli"
version = "0.1.3"
description = "Agent-ready second brain for people and teams."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = []

[project.scripts]
apollokairn = "cairn.cli:main"
ak = "cairn.cli:main"
cairn = "cairn.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
